[package]
name = "p2p-handshake-eth"
version = "0.1.0"
edition = "2021"
authors = ["Jayyy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rust-Eth 
reth-primitives = { git = "https://github.com/paradigmxyz/reth"}